# NeuroDynamics

./: .gitignore  .~lock.dataset_doublependulum_22.csv#  DockerFile.dockerfile  LSTM_execution.sh  LSTMmodel.py  README.md  dataset_doublependulum.csv  dataset_generation.py  docker-compose.yaml  entrypoint.sh  model_training.py  physics_system.py  physics_tuning.py  requirements.txt  runpod_finetune.sh  runpod_sweep.sh  stage2_finetune.py  test.py  transformer_execution.sh  transformer_model.py
test_suites/: CMakeLists.txt  hamiltonian_pybind.cpp  hamiltonian_tests  hamiltonian_tests.cpp  test_hamiltonian_loss.py
